[package]
name = "piggy"
description = "A command line tool for tracking monthly spending."
version = "0.1.0"
authors = ["Pirh <***redacted.email@redacted.nope***>"]

[dependencies]
ansi_term = "~0.10.2"
chrono = "~0.4.0"
serde = "~1.0.0"
serde_derive = "~1.0.0"
serde_yaml = "~0.7.0"
structopt = "0.1.4"
structopt-derive = "0.1.4"

[[bin]]
name = "piggy"
path = "src/main.rs"
doc = false
